# embeddedATM

./: .gitignore  .gitmodules  README.md
diagrams/: sw_architecture.py
src/nodemcu_wifi/: platformio.ini
src/nodemcu_wifi/lib/firebase-arduino-0.3/src/: FirebaseHttpClient.h
src/nodemcu_wifi/src/: firebase.txt  main.cpp  temp.txt
src/pico/: CMakeLists.txt  main.py
src/pico/src/: _node.txt  main.c
